# ragman

./: README.md  main.py  pyproject.toml
ragman/: core.py  ragman.py
