[project]
name = "ragman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.8",
    "click>=8.1.8",
    "openai>=1.77.0",
]

[project.scripts]
ragman = "ragman.ragman:cli"

[tool.setuptools]
packages = ["ragman"]
